CR-2008-02-26-1: Cleanup:   removed ts_log_fine cat output of 
                            wait_for_remote_file
                 Review:    EB

CR-2008-02-26-0: Enhancem:  o added new procedure to file_procedures.tcl:
                              analyze_directory_structure()
                            o added new script: analyze_dir.sh
                            o enabled submit host setting for GE adapters
                              in hedeby installation
                            o speed up and clean up of hedeby 
                              file_permission check
                 Review:    AA

RD-2008-02-26-0: Bugfix:    - fixed file issues with NFS4 spooling
                            - added shadowd installation message
                 Review:    EB

RH-2008-02-26-0: Enhancem:  new configuration parameter hedeby_java_version for
                            hedeby checktree
                 Review:    CR

HP-2008-02-25-0: Enhancem:  added automatic entering of automounter prefixes
                            to sge_aliases file. This can also handle variable
                            automounter prefixes (e.g. on Windows)
                 Review:    CR

AP-2008-02-21-0: Bugfix:    fix install messages to work with any branch

JO-2008-02-21-0: Bugfix:    fix install messages to work with any branch
      `          Review:    AP

AP-2008-02-20-0: Enhancem.: Adding proc get_SWC_USER
                 Bugfix:    o ARCo test - start/stop dbwriter when necessary
                            o handling if database removed from db configuration
                 Review:    JG

JG-2008-02-20-0: Enhancem.: added test for IZ 2495
                            speedup for auto install
                 Review:    RD

JG-2008-02-18-0: Enhancem.: added test for IZ 2492
                 Review:    RD

RD-2008-02-18-0: Enhancem.: added test for IZ 2490
                 Review:    JG

CR-2008-02-18-1: Enhancem.: o Added first version of basic resource move test