@@ -1,3 +1,7 @@
+RD-2008-02-27-0: Enhancem:  added test for ENABLE_RESCHEDULE_KILL
+                            and ENABLE_RESCHEDULE_SLAVE
+                 Review:    JG
+
 CR-2008-02-26-1: Cleanup:   removed ts_log_fine cat output of 
                             wait_for_remote_file
                  Review:    EB
